# TitanAPI

./: .gitignore  CHANGELOG.md  README.md
TitanAPI/: CMakeLists.txt  README.md
TitanAPI/include/: op2.hpp
TitanAPI/include/op2/: base.hpp  game.hpp  groups.hpp  mining.hpp  player.hpp  trigger.hpp  unit.hpp
TitanAPI/include/op2/abi/: addresses.hpp  cmd_builder.hpp  command_map.hpp  map_object.hpp  memory.hpp  structs.scaffold.hpp
TitanAPI/include/op2/abi/raw/: command.hpp
TitanAPI/include/op2/core/: error.hpp  location.hpp
TitanAPI/src/: mission.cpp  op2_crash.hpp  op2_log.hpp  op2_mission.hpp
TitanAPI/tools/: gen-addresses.ps1  gen-command-map.ps1  gen-enums.ps1  gen-structs.ps1
docs/: ABI-MECHANISM.md  FACADE-DESIGN.md  GETTING-STARTED.md
samples/: README.md
samples/ColdFront/: CMakeLists.txt  README.md  mission.cpp
samples/ColonyDemo/: CMakeLists.txt  README.md  mission.cpp  op2_log.hpp
samples/Layer1/: .gitignore  CMakeLists.txt  README.md  version.rc.in
samples/Layer1/include/op2/abi/: enums.hpp  memory.hpp
samples/Layer1/src/: mission.cpp  op2_log.hpp  op2_mission.hpp
samples/Mining/: CMakeLists.txt  README.md  mission.cpp  op2_log.hpp
samples/Nostalgia2P/: CMakeLists.txt  README.md  mission.cpp  op2_crash.hpp  op2_mission.hpp
samples/SmokeTest/: CMakeLists.txt  README.md  mission.cpp  op2_log.hpp  op2_mission.hpp  version.rc.in
samples/Starship/: CMakeLists.txt  README.md  mission.cpp  op2_log.hpp
samples/Template/: CMakeLists.txt  README.md  mission.cpp
